[gd_scene load_steps=16 format=3 uid="uid://dx1kprraoeemj"]

[ext_resource type="PackedScene" uid="uid://dgvdkbr7jgm3t" path="res://enemies/enemy.tscn" id="1_kfy5k"]
[ext_resource type="Texture2D" uid="uid://dxse886jeu4sj" path="res://assets/Enemies/Boar/Run-Sheet.png" id="2_fkyny"]
[ext_resource type="Script" path="res://enemies/boar.gd" id="2_ft5hw"]
[ext_resource type="Texture2D" uid="uid://b44hda4u2boly" path="res://assets/Enemies/Boar/Walk-Base-Sheet.png" id="3_wc0r6"]
[ext_resource type="Animation" uid="uid://5d7copni8kl" path="res://assets/Enemies/Boar/run.res" id="5_oayop"]
[ext_resource type="Animation" uid="uid://dsmt6622t5jtc" path="res://assets/Enemies/Boar/hited.res" id="6_amfwu"]
[ext_resource type="Animation" uid="uid://cw7ndptjme01r" path="res://assets/Enemies/Boar/idle.res" id="7_rwtf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbqme"]
size = Vector2(24, 22)

[sub_resource type="Animation" id="Animation_8y7wg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 48, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/Sprite2D:region_enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Graphic/Sprite2D:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fkyny")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Graphic/Sprite2D:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_37t2f"]
resource_name = "walk"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_wc0r6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/Sprite2D:region_enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/Sprite2D:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 288, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Graphic/Sprite2D:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Graphic/Sprite2D:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7veih"]
_data = {
"RESET": SubResource("Animation_8y7wg"),
"hited": ExtResource("6_amfwu"),
"idle": ExtResource("7_rwtf1"),
"run": ExtResource("5_oayop"),
"walk": SubResource("Animation_37t2f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8edn"]
size = Vector2(24, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4eh6"]
size = Vector2(28, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_027it"]
size = Vector2(28, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qvqw"]
size = Vector2(24, 22)

[node name="Boar" instance=ExtResource("1_kfy5k")]
collision_layer = 4
script = ExtResource("2_ft5hw")

[node name="Sprite2D" parent="Graphic" index="0"]
position = Vector2(-2, -16)
texture = ExtResource("2_fkyny")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 0, 48, 32)

[node name="WallChecker" type="RayCast2D" parent="Graphic" index="1"]
position = Vector2(0, -14)
target_position = Vector2(22, 0)

[node name="FootChecker" type="RayCast2D" parent="Graphic" index="2"]
position = Vector2(18, 0)
target_position = Vector2(0, 4)

[node name="PlayerChecker" type="RayCast2D" parent="Graphic" index="3"]
position = Vector2(10, -11)
rotation = 1.57079
target_position = Vector2(0, -50)
collision_mask = 2

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_vbqme")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_7veih")
}

[node name="CalmDownTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="HitBox" parent="." index="5"]
collision_layer = 0
collision_mask = 2

[node name="hitbox" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_b8edn")

[node name="hitbox2" type="CollisionShape2D" parent="HitBox" index="1"]
position = Vector2(4, -12)
shape = SubResource("RectangleShape2D_b4eh6")

[node name="Hurtbox" parent="." index="6"]
collision_layer = 4
collision_mask = 0

[node name="hurtbox2" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(4, -12)
shape = SubResource("RectangleShape2D_027it")

[node name="hurtbox" type="CollisionShape2D" parent="Hurtbox" index="1"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_7qvqw")
